--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,9 @@ AC_INIT(01847-test, 1.0)
 AC_CANONICAL_SYSTEM
 AM_INIT_AUTOMAKE()
 
+AC_CHECK_HEADERS([hidapi/hidapi.h])
+AC_CHECK_LIB(hidapi-hidraw, hid_write)
+
 AC_PROG_CC
 
 AC_CONFIG_FILES(Makefile src/Makefile)
