Creazione autotools per generare una libreria

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_INIT(01847-test, 1.0)
 
 
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE()
+AM_INIT_AUTOMAKE([subdir-objects])
 
 AM_CONFIG_HEADER(config.h)
 
@@ -13,7 +13,11 @@ AC_CHECK_LIB(hidapi-hidraw, hid_write, ,AC_MSG_ERROR([hidapi lib not found]))
 AC_CHECK_HEADER(hidapi/hidapi.h)
 
 AC_PROG_CC
+AC_PROG_LIBTOOL
 
-AC_CONFIG_FILES(Makefile src/Makefile)
+AC_CONFIG_FILES(Makefile 
+		example/Makefile
+		libknxusb/Makefile
+		include/Makefile)
 AC_OUTPUT
 
