Fix decode data and make check

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,11 +3,9 @@ TESTS = test_libknxusb
 
 test_libknxusb_SOURCES = \
 	test_libknxusb.c 
-#	../libknxusb/libknxusb.c \
-#	../libknxusb/libknxusb_priv.h
 
-test_libknxusb_CFLAGS = @CMOCKA_CFLAGS@ -I$(top_srcdir)/include
-#test_libknxusb_LDADD = @CMOCKA_LIBS@
-test_libknxusb_LDADD = $(top_builddir)/libknxusb/libknxusb.la @CMOCKA_LIBS@
+test_libknxusb_CFLAGS = @CMOCKA_CFLAGS@ -I$(top_srcdir)/include -I$(top_srcdir)/libknxusb
+test_libknxusb_LDADD = @CMOCKA_LIBS@
+#test_libknxusb_LDADD = @CMOCKA_LIBS@ $(top_builddir)/libknxusb/libknxusb.la
 
 MAINTAINERCLEANFILES = Makefile.in
