modifica per stampa valori di temperatura

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -65,11 +65,11 @@ ACLOCAL_AMFLAGS=-I ../m4
 
 01847_temp_LDADD = \
 	$(top_builddir)/libknxusb/libknxusb.la \
-	$(PTHREAD_LIBS) 
+	$(PTHREAD_LIBS)
 
 # Linker options
 01847_temp_LDFLAGS = \
-	-rpath `cd $(top_builddir);pwd`/libknxusb/.libs
+	-rpath `cd $(top_builddir);pwd`/libknxusb/.libs -lm
 
 # Compiler options
 01847_temp_CPPFLAGS = \
