Aggiunto programma di test per connessione KNX tramite interfaccia seriale

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -3,12 +3,17 @@
 # the 'bin_' indicates that these build products will be installed
 # in the $(bindir) directory. For example /usr/bin
 #bin_PROGRAMS=exampleProgram
-bin_PROGRAMS=01847-temp
+bin_PROGRAMS= \
+	01847-temp
 
 # Because a.out is only a sample program we don't want it to be installed.
 # The 'noinst_' prefix indicates that the following targets are not to be
 # installed.
-noinst_PROGRAMS=01847-test 01847-test-nolib 01847-temp-reader
+noinst_PROGRAMS= \
+	01847-test \
+	01847-test-nolib \
+	01847-temp-reader \
+	KNXTinySerial-test
 
 #######################################
 # Build information for each executable. The variable name is derived
@@ -80,8 +85,9 @@ ACLOCAL_AMFLAGS=-I ../m4
 	01847-temp-reader.c 
 
 
-
-
+# Test dell'hw KNX Tiny Serial 810
+KNXTinySerial_test_SOURCES = \
+	KNXTinySerial-test.c
 
 
 # Data files to be included in distro but not to be installed.
