Aggiunta libreria per accesso a KNX da seriale

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -3,4 +3,5 @@
 #   * with prefix include_ the files will be install to /usr/include (in Debian)
 #   * with prefix pkginclude_ the files will be install to /usr/include/pkgname (in Debian)
 include_HEADERS = \
-  libknxusb.h
+  libknxusb.h \
+  libknx810.h
