--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT(01847-test, 1.0)
+AC_INIT(UsbKnxInterfaceVIMAR01847, 1.0)
 
 
 AC_CANONICAL_SYSTEM
