move DPTFloat conversion to library (to test it)

--- a/libknxusb/Makefile.am
+++ b/libknxusb/Makefile.am
@@ -2,7 +2,8 @@
 # The list of libraries we are building seperated by spaces.
 # The 'lib_' indicates that these build products will be installed
 # in the $(libdir) directory. For example /usr/lib
-lib_LTLIBRARIES = libknxusb.la
+lib_LTLIBRARIES = \
+	libknxusb.la
 
 
 #######################################
@@ -14,15 +15,19 @@ libknxusb_la_SOURCES = \
 	libknxusb.c \
 	knxhid.c \
 	cemi.c \
+	knxutils.c \
 	libknxusb_priv.h 
  
 
 # Linker options
-libknxusb_la_LDFLAGS = 
+libknxusb_la_LDFLAGS = \
+	-lm
 
 # Compiler options. Here we are adding the include directory
 # to be searched for headers included in the source code.
-libknxusb_la_CPPFLAGS = -I$(top_srcdir)/include
+libknxusb_la_CPPFLAGS = \
+	-I$(top_srcdir)/include
 
-MAINTAINERCLEANFILES = Makefile.in
+MAINTAINERCLEANFILES = \
+	Makefile.in
 
