--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ libtool
 *.trs
 test-driver
 tests/test_libknxusb
+tests/test_knxutils
 .dirstamp
 example/01847-temp-reader
 example/tplotd_setup.py
