--- a/libknxusb/Makefile.am
+++ b/libknxusb/Makefile.am
@@ -3,7 +3,7 @@
 # The 'lib_' indicates that these build products will be installed
 # in the $(libdir) directory. For example /usr/lib
 lib_LTLIBRARIES = \
-	libknxusb.la
+  libknxusb.la
 
 
 #######################################
@@ -12,22 +12,24 @@ lib_LTLIBRARIES = \
 # Sources and headers nedded by library
 # All file are included in the distro
 libknxusb_la_SOURCES = \
-	libknxusb.c \
-	knxhid.c \
-	cemi.c \
+  libknxusb.c \
+  libknxusb_priv.h \
+  knxhid.c \
+  knxhid.h \
+  cemi.c \
+  cemi.h \
 	knxutils.c \
-	libknxusb_priv.h 
- 
+  knxutils.h
 
 # Linker options
 libknxusb_la_LDFLAGS = \
-	-lm
+  -lm
 
 # Compiler options. Here we are adding the include directory
 # to be searched for headers included in the source code.
 libknxusb_la_CPPFLAGS = \
-	-I$(top_srcdir)/include
+  -I$(top_srcdir)/include
 
 MAINTAINERCLEANFILES = \
-	Makefile.in
+  Makefile.in
 
